Fix header content width jumping

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -28,7 +28,7 @@ body {
   grid-row-gap: 8vw;
 }
 
-@media screen and (min-width: 630px) {
+@media screen and (min-width: 63rem) {
   .container {
     grid-row-gap: 3rem;
   }
