--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -36,7 +36,7 @@ body {
   }
 }
 
-@media screen and (min-width: 630px) {
+@media screen and (min-width: 63rem) {
   body {
     font-size: 2.5rem;
   }
