--- a/src/styles/components/_board.scss
+++ b/src/styles/components/_board.scss
@@ -65,7 +65,7 @@
   }
 }
 
-@media screen and (min-width: 630px) {
+@media screen and (min-width: 63rem) {
   .board {
     border-radius: calc(4rem / var(--board-columns));
   
