--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -20,7 +20,7 @@
   }
 }
 
-@media screen and (min-width: 630px) {
+@media screen and (min-width: 63rem) {
   .select {
     &__text {
       margin-bottom: 2rem;
